chores: Export requirements.txt for non-pipenv installation
And explain how to run these scripts on Termux

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,19 @@
-beautifulsoup4==4.7.1
+autopep8==1.5.3
+beautifulsoup4==4.9.1
 cycler==0.10.0
-kiwisolver==1.1.0
-matplotlib==3.0.3
-numpy==1.16.3
-pandas==0.24.2
-pyparsing==2.4.0
-python-dateutil==2.8.0
-pytz==2019.1
-six==1.12.0
-soupsieve==1.8
-beautifulsoup4==4.7.1
-cycler==0.10.0
-kiwisolver==1.1.0
-matplotlib==3.0.3
-numpy==1.16.3
-pandas==0.24.2
-pyparsing==2.4.0
-python-dateutil==2.8.0
-pytz==2019.1
-six==1.12.0
-soupsieve==1.8
+flake8==3.8.3
+kiwisolver==1.2.0
+matplotlib==3.2.1
+mccabe==0.6.1
+numpy==1.18.5
+pandas==1.0.4
+pycodestyle==2.6.0
+pyflakes==2.2.0
+pyparsing==2.4.7
+python-dateutil==2.8.1
+pytz==2020.1
+selenium==3.141.0
+six==1.15.0
+soupsieve==2.0.1
+toml==0.10.1
+urllib3==1.25.9
